Solve server side

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "seed": "node config/seeds.js"
   },
   "dependencies": {
@@ -13,6 +14,8 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "nodemon": "^2.0.19",
+    "stripe": "^9.12.0"
   }
 }
