--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,19 @@
     "watch": "nodemon server.js",
     "seed": "node config/seeds.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.18.2",
+    "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "nodemon": "^2.0.19",
     "stripe": "^9.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
